@@ -47,6 +47,7 @@ Version 1.13.0-dev:
    * Fixed halos glitching through locations that become shrouded after the
      halo is rendered for the first time.
    * OS X user data directory is now ~/Library/Application Support/Wesnoth_1.13
+   * Fix bug #21257: Lagging animations with skip AI animations and fog/shroud.
 
 Version 1.11.11:
  * Add-ons server:
